--- a/index.html
+++ b/index.html
@@ -1,133 +1,222 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Minecraft name checker </title>
-    <style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Minecraft name checker</title>
+<style>
+    body {
+        margin: 0;
+        min-height: 100vh;
+        background: radial-gradient(circle at top, #00c6ff, #0072ff 60%, #0a1a3c);
+        font-family: "Segoe UI", sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        color: white;
+        padding: 20px;
+        overflow-y: auto;
+    }
+
+    .card {
+        background: rgba(255, 255, 255, 0.18);
+        backdrop-filter: blur(20px);
+        border-radius: 30px;
+        padding: 30px;
+        width: 100%;
+        max-width: 480px;
+        text-align: center;
+        box-shadow: 0 10px 45px rgba(0, 0, 0, 0.4);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        animation: fadeIn 0.6s ease;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: scale(0.96); }
+        to { opacity: 1; transform: scale(1); }
+    }
+
+    h1 {
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    input {
+        width: 100%;
+        padding: 16px;
+        font-size: 18px;
+        border-radius: 15px;
+        border: none;
+        outline: none;
+        margin-bottom: 20px;
+        text-align: center;
+        box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    button {
+        width: 100%;
+        padding: 16px;
+        font-size: 18px;
+        background: linear-gradient(135deg, #4facfe, #00f2fe);
+        border: none;
+        border-radius: 15px;
+        cursor: pointer;
+        color: white;
+        transition: 0.3s;
+        font-weight: bold;
+        box-shadow: 0 5px 18px rgba(0, 0, 0, 0.25);
+        margin-bottom: 10px;
+    }
+
+    button:hover {
+        transform: scale(1.03);
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.35);
+    }
+
+    #result {
+        margin-top: 20px;
+        font-size: 18px;
+        font-weight: bold;
+        word-wrap: break-word;
+    }
+
+    .skin-buttons {
+        margin-top: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    .skin-buttons button {
+        width: auto;
+        padding: 10px 15px;
+        font-size: 16px;
+    }
+
+    img.skin-img {
+        max-width: 100%;
+        border-radius: 10px;
+        box-shadow: 0 0 15px rgba(0,0,0,0.5);
+        margin-top: 10px;
+    }
+
+    /* ================== MOBILE FRIENDLY ================== */
+    @media (max-width: 500px) {
         body {
-            margin: 0;
-            height: 100vh;
-            background: radial-gradient(circle at top, #00c6ff, #0072ff 60%, #0a1a3c);
-            font-family: "Segoe UI", sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            overflow: hidden;
+            padding: 10px;
+            align-items: flex-start;
         }
-
         .card {
-            background: rgba(255, 255, 255, 0.18);
-            backdrop-filter: blur(20px);
-            border-radius: 30px;
-            padding: 50px;
-            width: 480px;
-            text-align: center;
-            box-shadow: 0 10px 45px rgba(0, 0, 0, 0.4);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            animation: fadeIn 0.6s ease;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: scale(0.96);
-            }
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        h1 {
-            font-size: 40px;
-            margin-bottom: 25px;
-        }
-
-        input {
+            padding: 20px;
             width: 100%;
-            padding: 18px;
-            font-size: 20px;
-            border-radius: 15px;
-            border: none;
-            outline: none;
-            margin-bottom: 25px;
-            text-align: center;
-            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
+            border-radius: 20px;
+            backdrop-filter: none;
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
-
-        button {
+        h1 { font-size: 26px; margin-bottom: 15px; }
+        input, button { font-size: 16px; padding: 14px; }
+        .skin-buttons {
+            flex-direction: column;
+        }
+        .skin-buttons button {
             width: 100%;
-            padding: 18px;
-            font-size: 20px;
-            background: linear-gradient(135deg, #4facfe, #00f2fe);
-            border: none;
-            border-radius: 15px;
-            cursor: pointer;
-            color: white;
-            transition: 0.3s;
-            font-weight: bold;
-            box-shadow: 0 5px 18px rgba(0, 0, 0, 0.25);
+            font-size: 16px;
         }
-
-        button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.35);
+        #skinDisplay img.skin-img {
+            width: 90%;
+            margin: 5px auto;
         }
-
-        #result {
-            margin-top: 28px;
-            font-size: 26px;
-            font-weight: bold;
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
-    <div class="card">
-        <h1>  Minecraft name checker</h1>
-        <input id="nameInput" type="text" placeholder="enter name " />
-        <button onclick="checkName()">check </button>
-        <div id="result"></div>
-    </div>
+<div class="card">
+    <h1>Minecraft name checker</h1>
+    <input id="nameInput" type="text" placeholder="Enter name" />
+    <button onclick="checkName()">Check</button>
+    <div id="result"></div>
+</div>
 
-    <script>
-        async function checkName() {
-            const name = document.getElementById("nameInput").value.trim();
-            const resultBox = document.getElementById("result");
+<script>
+async function checkName() {
+    const name = document.getElementById("nameInput").value.trim();
+    const resultBox = document.getElementById("result");
 
-            if (!name) {
-                resultBox.textContent = "Enter a valid name";
-                resultBox.style.color = "#ffea00";
-                return;
-            }
+    if (!name) {
+        resultBox.innerHTML = "Enter a valid name";
+        resultBox.style.color = "#ffea00";
+        return;
+    }
 
-            resultBox.textContent = "Checking...";
-            resultBox.style.color = "white";
+    resultBox.innerHTML = "Checking...";
+    resultBox.style.color = "white";
 
-            try {
-                const response = await fetch(`https://playerdb.co/api/player/minecraft/${name}`);
-                const data = await response.json();
+    try {
+        const response = await fetch(`https://playerdb.co/api/player/minecraft/${name}`);
+        const data = await response.json();
 
-                if (data.success === false) {
-                    resultBox.textContent = "available";
-                    resultBox.style.color = "#00ff7f";
-                    return;
-                }
-
-                if (data.success === true) {
-                    resultBox.textContent = "not available";
-                    resultBox.style.color = "#ff4b4b";
-                    return;
-                }
-
-                resultBox.textContent = "erroe";
-                resultBox.style.color = "orange";
-            } catch (e) {
-                resultBox.textContent = "error w server";
-                resultBox.style.color = "orange";
-            }
+        if (data.success === false) {
+            resultBox.innerHTML = "<span style='color:#00ff7f;'>Available</span>";
+            return;
         }
-    </script>
+
+        if (data.success === true) {
+            const player = data.data.player;
+            const uuid = player.id;
+            const username = player.username;
+            const legacy = player.legacy ? "Yes" : "No";
+            const skinModel = player.textures?.model || "default";
+
+            const headImg = `https://mc-heads.net/avatar/${uuid}/200`;
+            const bodyImg = `https://mc-heads.net/body/${uuid}/250`;
+            const fullSkin = `https://crafatar.com/skins/${uuid}`;
+
+            resultBox.style.color = "white";
+            resultBox.innerHTML = `
+                <div style="text-align:center;">
+                    <span style="color:#ff4b4b; font-size:24px;">Not Available</span><br><br>
+                    <strong>Username:</strong> ${username}<br>
+                    <strong>UUID:</strong> ${uuid}<br>
+                    <strong>Legacy:</strong> ${legacy}<br>
+                    <strong>Skin Model:</strong> ${skinModel}<br>
+
+                    <img src="${bodyImg}" class="skin-img" alt="Body Skin"><br>
+
+                    <div class="skin-buttons">
+                        <button onclick="showSkin('${headImg}', 'Head')">Show Head</button>
+                        <button onclick="showSkin('${bodyImg}', 'Body')">Show Body</button>
+                        <button onclick="showSkin('${fullSkin}', 'Full Skin')">Show Full Skin</button>
+                        <button onclick="downloadSkin('${fullSkin}', '${username}.png')">Download Skin</button>
+                    </div>
+
+                    <div id="skinDisplay"></div>
+                </div>
+            `;
+            return;
+        }
+
+        resultBox.innerHTML = "<span style='color:orange;'>Error</span>";
+    } catch (e) {
+        resultBox.innerHTML = "<span style='color:orange;'>Server error</span>";
+    }
+}
+
+function showSkin(url, title) {
+    const display = document.getElementById("skinDisplay");
+    display.innerHTML = `<strong>${title}</strong><br><img src="${url}" class="skin-img">`;
+    display.scrollIntoView({ behavior: "smooth" });
+}
+
+function downloadSkin(url, filename) {
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = filename;
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+}
+</script>
 </body>
 </html>
